{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 2805,
  "lineage": "22ed16ad-8673-b2a3-9190-c26de1a44c13",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "celery_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:security-group/sg-043579c8c5d24a32f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow outbound Redis connections",
                "from_port": 6380,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f19c18f06a82d83e"
                ],
                "self": false,
                "to_port": 6380
              }
            ],
            "id": "sg-043579c8c5d24a32f",
            "ingress": [],
            "name": "celery-workers-20250709150139974400000006",
            "name_prefix": "celery-workers-",
            "owner_id": "860619597616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "celery-workers-sg"
            },
            "tags_all": {
              "Name": "celery-workers-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:security-group/sg-033171a73cb68239d",
            "description": "Security group for ECS tasks to access database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS for AWS services",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "DNS resolution",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL database access to Aurora",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0763d1798695cbc9b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-033171a73cb68239d",
            "ingress": [],
            "name": "jao-dev-db-access",
            "name_prefix": "",
            "owner_id": "860619597616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "jao"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vectordb.aws_security_group.aurora",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.data.aws_region.current",
            "module.vpc.data.aws_vpc_endpoint.existing_ecr_api",
            "module.vpc.data.aws_vpc_endpoint.existing_ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint.existing_logs",
            "module.vpc.data.aws_vpc_endpoint.existing_s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "oleeo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:security-group/sg-0ed0c54df8be2f3a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound MSSQL connection to database VPC",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              }
            ],
            "id": "sg-0ed0c54df8be2f3a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound MSSQL connection to database VPC",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "oleeo-20250806101323088900000001",
            "name_prefix": "oleeo-",
            "owner_id": "860619597616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "oleeo-sg"
            },
            "tags_all": {
              "Name": "oleeo-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:security-group/sg-0f19c18f06a82d83e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f19c18f06a82d83e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6380,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6380
              }
            ],
            "name": "redis-celery-20250709150137921400000004",
            "name_prefix": "redis-celery-",
            "owner_id": "860619597616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "redis-celery-sg"
            },
            "tags_all": {
              "Name": "redis-celery-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:security-group/sg-0a3b52e8e85b5bb30",
            "description": "Security group for services that need Redis access",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow Redis connections",
                "from_port": 6380,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f19c18f06a82d83e"
                ],
                "self": false,
                "to_port": 6380
              }
            ],
            "id": "sg-0a3b52e8e85b5bb30",
            "ingress": [],
            "name": "jao-dev-redis-client-20250709150139782800000005",
            "name_prefix": "jao-dev-redis-client-",
            "owner_id": "860619597616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-redis-client-sg",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-redis-client-sg",
              "Project": "jao"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:vpc/vpc-08a6f73395b81df6e",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-034c8b2f5680ee3bb",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-818da0e9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a6f73395b81df6e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03a73d39b6a843fb1",
            "owner_id": "860619597616",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-vpc",
              "Project": "jao"
            }
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:loadbalancer/app/jao-dev-alb/642fb17892c93461",
            "arn_suffix": "app/jao-dev-alb/642fb17892c93461",
            "desync_mitigation_mode": "defensive",
            "dns_name": "jao-dev-alb-196601390.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:loadbalancer/app/jao-dev-alb/642fb17892c93461",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jao-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-080bf8d1a9bd35b49"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-046059ab96f9f578e"
              },
              {
                "subnet_id": "subnet-0541d2d50a6153cb5"
              }
            ],
            "subnets": [
              "subnet-046059ab96f9f578e",
              "subnet-0541d2d50a6153cb5"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-alb",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-alb",
              "Project": "jao"
            },
            "vpc_id": "vpc-08a6f73395b81df6e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.ecs.aws_security_group.admin_alb",
            "module.ecs.data.aws_vpc.main",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:loadbalancer/net/jao-dev-nlb/db1bcbfa277a5d84",
            "arn_suffix": "net/jao-dev-nlb/db1bcbfa277a5d84",
            "dns_name": "jao-dev-nlb-db1bcbfa277a5d84.elb.eu-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:loadbalancer/net/jao-dev-nlb/db1bcbfa277a5d84",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "jao-dev-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e4bdac8812ae5c4"
              },
              {
                "subnet_id": "subnet-09fecb8cc066b866e"
              }
            ],
            "subnets": [
              "subnet-04e4bdac8812ae5c4",
              "subnet-09fecb8cc066b866e"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-nlb",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-nlb",
              "Project": "jao"
            },
            "vpc_id": "vpc-08a6f73395b81df6e",
            "zone_id": "ZD4D7Y8KGAS4G"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:listener/app/jao-dev-alb/642fb17892c93461/8fda3362750f7868",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:targetgroup/jao-dev-alb-tg/3b8852dd48eec77b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:listener/app/jao-dev-alb/642fb17892c93461/8fda3362750f7868",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:loadbalancer/app/jao-dev-alb/642fb17892c93461",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb.admin",
            "module.ecs.aws_lb_target_group.admin",
            "module.ecs.aws_security_group.admin_alb",
            "module.ecs.data.aws_vpc.main",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:listener/net/jao-dev-nlb/db1bcbfa277a5d84/3bd3d0c4649b7bec",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:targetgroup/jao-dev-nlb-tg/3c99eaca3b6a2db0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:listener/net/jao-dev-nlb/db1bcbfa277a5d84/3bd3d0c4649b7bec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:loadbalancer/net/jao-dev-nlb/db1bcbfa277a5d84",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_target_group.app",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:targetgroup/jao-dev-alb-tg/3b8852dd48eec77b",
            "arn_suffix": "targetgroup/jao-dev-alb-tg/3b8852dd48eec77b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "8000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:targetgroup/jao-dev-alb-tg/3b8852dd48eec77b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jao-dev-alb-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-alb-tg",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-alb-tg",
              "Project": "jao"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:targetgroup/jao-dev-nlb-tg/3c99eaca3b6a2db0",
            "arn_suffix": "targetgroup/jao-dev-nlb-tg/3c99eaca3b6a2db0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "8000",
                "protocol": "TCP",
                "timeout": 6,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:targetgroup/jao-dev-nlb-tg/3c99eaca3b6a2db0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jao-dev-nlb-tg",
            "port": 8000,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-nlb-tg",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-nlb-tg",
              "Project": "jao"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:security-group/sg-080bf8d1a9bd35b49",
            "description": "Security group for admin ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP to ECS tasks",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "id": "sg-080bf8d1a9bd35b49",
            "ingress": [
              {
                "cidr_blocks": [
                  "195.144.8.0/24"
                ],
                "description": "HTTP from 195.144.8.0/24",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "195.144.8.0/24"
                ],
                "description": "HTTPS from 195.144.8.0/24",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "51.149.8.0/24"
                ],
                "description": "HTTP from 51.149.8.0/24",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "51.149.8.0/24"
                ],
                "description": "HTTPS from 51.149.8.0/24",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "jao-dev-admin-alb-sg",
            "name_prefix": "",
            "owner_id": "860619597616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-admin-alb-sg",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-admin-alb-sg",
              "Project": "jao"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.data.aws_vpc.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:security-group/sg-0c928a596c4ed3ffd",
            "description": "Allow inbound access from the NLB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "DNS TCP to VPC",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "DNS UDP to VPC",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS to VPC endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL database access",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Redis database access",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "id": "sg-0c928a596c4ed3ffd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from admin ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-080bf8d1a9bd35b49"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "jao-dev-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "860619597616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-ecs-tasks-sg",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-ecs-tasks-sg",
              "Project": "jao"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_security_group.admin_alb",
            "module.ecs.data.aws_vpc.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bedrock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:vpc-endpoint/vpce-06eec5f7bd740ce82",
            "dns_entry": [
              {
                "dns_name": "vpce-06eec5f7bd740ce82-5h206i1m.bedrock.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-06eec5f7bd740ce82-5h206i1m-eu-west-2b.bedrock.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-06eec5f7bd740ce82-5h206i1m-eu-west-2a.bedrock.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "bedrock.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z07839181BAO6JRY4FTXZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-06eec5f7bd740ce82",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0265f09370b908ce0",
              "eni-026dc1d480aab18e1"
            ],
            "owner_id": "860619597616",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c928a596c4ed3ffd"
            ],
            "service_name": "com.amazonaws.eu-west-2.bedrock",
            "state": "available",
            "subnet_ids": [
              "subnet-04e4bdac8812ae5c4",
              "subnet-09fecb8cc066b866e"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "bedrock-endpoint"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bedrock-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "dependencies": [
            "module.ecs.aws_security_group.admin_alb",
            "module.ecs.aws_security_group.ecs_tasks",
            "module.ecs.data.aws_vpc.main",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:loadbalancer/app/jao-frontend-dev-alb/50a2d5f050898c9b",
            "arn_suffix": "app/jao-frontend-dev-alb/50a2d5f050898c9b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "jao-frontend-dev-alb-1754654300.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:loadbalancer/app/jao-frontend-dev-alb/50a2d5f050898c9b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jao-frontend-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0efb5877430fcbbce"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-046059ab96f9f578e"
              },
              {
                "subnet_id": "subnet-0541d2d50a6153cb5"
              }
            ],
            "subnets": [
              "subnet-046059ab96f9f578e",
              "subnet-0541d2d50a6153cb5"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-frontend-dev",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-frontend-dev",
              "Project": "jao"
            },
            "vpc_id": "vpc-08a6f73395b81df6e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.frontend.aws_security_group.frontend_lb",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:listener/app/jao-frontend-dev-alb/50a2d5f050898c9b/834e82b47dad6ba5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:targetgroup/jao-frontend-dev-tg/084f085e6476ec84",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:listener/app/jao-frontend-dev-alb/50a2d5f050898c9b/834e82b47dad6ba5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:loadbalancer/app/jao-frontend-dev-alb/50a2d5f050898c9b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-frontend-dev",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-frontend-dev",
              "Project": "jao"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.frontend.aws_lb.frontend",
            "module.frontend.aws_lb_target_group.frontend",
            "module.frontend.aws_security_group.frontend_lb",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:targetgroup/jao-frontend-dev-tg/084f085e6476ec84",
            "arn_suffix": "targetgroup/jao-frontend-dev-tg/084f085e6476ec84",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:860619597616:targetgroup/jao-frontend-dev-tg/084f085e6476ec84",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jao-frontend-dev-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-frontend-dev",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-frontend-dev",
              "Project": "jao"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:security-group/sg-0add0320fe602b7d7",
            "description": "Security group for frontend ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0add0320fe602b7d7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0efb5877430fcbbce"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "jao-frontend-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "860619597616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-frontend-dev",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-frontend-dev",
              "Project": "jao"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.frontend.aws_security_group.frontend_lb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:security-group/sg-0efb5877430fcbbce",
            "description": "Security group for frontend load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efb5877430fcbbce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "jao-frontend-dev-lb-sg",
            "name_prefix": "",
            "owner_id": "860619597616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-frontend-dev",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-frontend-dev",
              "Project": "jao"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vectordb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:security-group/sg-0763d1798695cbc9b",
            "description": "Security group for Aurora PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0763d1798695cbc9b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL from security group sg-033171a73cb68239d",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033171a73cb68239d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "jao-dev-aurora-sg",
            "name_prefix": "",
            "owner_id": "860619597616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Module": "aurora_pgvector",
              "Name": "jao-dev",
              "Project": "jao",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Module": "aurora_pgvector",
              "Name": "jao-dev",
              "Project": "jao",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vectordb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aurora_ingress_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow PostgreSQL from security group sg-033171a73cb68239d",
            "from_port": 5432,
            "id": "sgrule-192119888",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0763d1798695cbc9b",
            "security_group_rule_id": "sgr-0c9b64b98cf3d3444",
            "self": false,
            "source_security_group_id": "sg-033171a73cb68239d",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_access",
            "module.vectordb.aws_security_group.aurora",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.aws_vpc_endpoint.ecr_api",
            "module.vpc.aws_vpc_endpoint.ecr_dkr",
            "module.vpc.aws_vpc_endpoint.logs",
            "module.vpc.aws_vpc_endpoint.s3",
            "module.vpc.data.aws_region.current",
            "module.vpc.data.aws_vpc_endpoint.existing_ecr_api",
            "module.vpc.data.aws_vpc_endpoint.existing_ecr_dkr",
            "module.vpc.data.aws_vpc_endpoint.existing_logs",
            "module.vpc.data.aws_vpc_endpoint.existing_s3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b6477c411055018",
            "association_id": "eipassoc-0eefaa77304de15db",
            "domain": "vpc",
            "id": "eipalloc-01b6477c411055018",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0388c1ccecfcf5be3",
            "private_dns": "ip-10-0-101-181.eu-west-2.compute.internal",
            "private_ip": "10.0.101.181",
            "public_dns": "ec2-13-134-52-127.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.134.52.127",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-eip-1",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-eip-1",
              "Project": "jao"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:internet-gateway/igw-09fb4199ede5dd36a",
            "id": "igw-09fb4199ede5dd36a",
            "owner_id": "860619597616",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-igw",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-igw",
              "Project": "jao"
            },
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b6477c411055018",
            "association_id": "eipassoc-0eefaa77304de15db",
            "connectivity_type": "public",
            "id": "nat-0ced665745bee2c87",
            "network_interface_id": "eni-0388c1ccecfcf5be3",
            "private_ip": "10.0.101.181",
            "public_ip": "13.134.52.127",
            "subnet_id": "subnet-046059ab96f9f578e",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-nat-1",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-nat-1",
              "Project": "jao"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:route-table/rtb-0d455e24b3dbecdc7",
            "id": "rtb-0d455e24b3dbecdc7",
            "owner_id": "860619597616",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ced665745bee2c87",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-private-rt-1",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-private-rt-1",
              "Project": "jao"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:route-table/rtb-025602b381d314cd8",
            "id": "rtb-025602b381d314cd8",
            "owner_id": "860619597616",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09fb4199ede5dd36a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-public-rt",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-public-rt",
              "Project": "jao"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0baa4c511b8e6990c",
            "route_table_id": "rtb-0d455e24b3dbecdc7",
            "subnet_id": "subnet-09fecb8cc066b866e"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebf30e4b57f0675f",
            "route_table_id": "rtb-0d455e24b3dbecdc7",
            "subnet_id": "subnet-04e4bdac8812ae5c4"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0263fbcd26a13030e",
            "route_table_id": "rtb-025602b381d314cd8",
            "subnet_id": "subnet-046059ab96f9f578e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d97d28c7e8104781",
            "route_table_id": "rtb-025602b381d314cd8",
            "subnet_id": "subnet-0541d2d50a6153cb5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:security-group/sg-034c4dd9c08e43500",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034c4dd9c08e43500",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "jao-dev-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "860619597616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-vpc-endpoints-sg",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-vpc-endpoints-sg",
              "Project": "jao"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:subnet/subnet-09fecb8cc066b866e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fecb8cc066b866e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "860619597616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-private-subnet-eu-west-2a",
              "Project": "jao",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-private-subnet-eu-west-2a",
              "Project": "jao",
              "Tier": "Private"
            },
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:subnet/subnet-04e4bdac8812ae5c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e4bdac8812ae5c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "860619597616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-private-subnet-eu-west-2b",
              "Project": "jao",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-private-subnet-eu-west-2b",
              "Project": "jao",
              "Tier": "Private"
            },
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:subnet/subnet-046059ab96f9f578e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046059ab96f9f578e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "860619597616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-public-subnet-eu-west-2a",
              "Project": "jao",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-public-subnet-eu-west-2a",
              "Project": "jao",
              "Tier": "Public"
            },
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:subnet/subnet-0541d2d50a6153cb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0541d2d50a6153cb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "860619597616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-public-subnet-eu-west-2b",
              "Project": "jao",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-public-subnet-eu-west-2b",
              "Project": "jao",
              "Tier": "Public"
            },
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:vpc/vpc-08a6f73395b81df6e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f7320fec92f2ab75",
            "default_route_table_id": "rtb-03a73d39b6a843fb1",
            "default_security_group_id": "sg-0c185d759d5103a1d",
            "dhcp_options_id": "dopt-818da0e9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a6f73395b81df6e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a73d39b6a843fb1",
            "owner_id": "860619597616",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-vpc",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-vpc",
              "Project": "jao"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:vpc-endpoint/vpce-09122b9e465931ba7",
            "dns_entry": [
              {
                "dns_name": "vpce-09122b9e465931ba7-z4bd2tyc.api.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-09122b9e465931ba7-z4bd2tyc-eu-west-2a.api.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-09122b9e465931ba7-z4bd2tyc-eu-west-2b.api.ecr.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "api.ecr.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z047362623IXW37O5KNVZ"
              },
              {
                "dns_name": "ecr.eu-west-2.api.aws",
                "hosted_zone_id": "Z0043688S2AXI4UMKNLP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-09122b9e465931ba7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01923adad685d2681",
              "eni-050b74ad205055ac5"
            ],
            "owner_id": "860619597616",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-034c4dd9c08e43500"
            ],
            "service_name": "com.amazonaws.eu-west-2.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-04e4bdac8812ae5c4",
              "subnet-09fecb8cc066b866e"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-ecr-api-endpoint",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-ecr-api-endpoint",
              "Project": "jao"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:vpc-endpoint/vpce-03a0adcb120c13e08",
            "dns_entry": [
              {
                "dns_name": "vpce-03a0adcb120c13e08-nuzhboxd.logs.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-03a0adcb120c13e08-nuzhboxd-eu-west-2b.logs.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-03a0adcb120c13e08-nuzhboxd-eu-west-2a.logs.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "logs.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z00211831L2974WG70XHF"
              },
              {
                "dns_name": "logs.eu-west-2.api.aws",
                "hosted_zone_id": "Z0043714338V66DPCMVJ1"
              },
              {
                "dns_name": "streaming-logs.eu-west-2.api.aws",
                "hosted_zone_id": "Z04733812W280NVQLEMI5"
              },
              {
                "dns_name": "streaming-logs.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z0021155CN6E25KXM1RV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-03a0adcb120c13e08",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-014c4a28abd6709b2",
              "eni-0d84be60d229c8e98"
            ],
            "owner_id": "860619597616",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-034c4dd9c08e43500"
            ],
            "service_name": "com.amazonaws.eu-west-2.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-04e4bdac8812ae5c4",
              "subnet-09fecb8cc066b866e"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-logs-endpoint",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-logs-endpoint",
              "Project": "jao"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:860619597616:vpc-endpoint/vpce-09df6b50b65537d82",
            "cidr_blocks": [
              "52.95.150.0/24",
              "52.95.191.0/24",
              "52.95.142.0/23",
              "16.12.16.0/23",
              "3.5.244.0/22",
              "52.219.219.0/24",
              "52.95.144.0/24",
              "52.95.148.0/23",
              "16.12.15.0/24"
            ],
            "id": "vpce-09df6b50b65537d82",
            "owner_id": "860619597616",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ca54015",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0d455e24b3dbecdc7"
            ],
            "service_name": "com.amazonaws.eu-west-2.s3",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-s3-endpoint",
              "Project": "jao"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "jao-dev-s3-endpoint",
              "Project": "jao"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08a6f73395b81df6e"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}